--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,8 @@
 {
+  "typeRoots": [
+    "../node_modules/@types",
+    "../@types"
+  ],
   "compilerOptions": {
     "target": "ES2020",
     "useDefineForClassFields": true,
